snapshot project.clj before starting work in cljs integration...